tests/checker/fail/literal_dispatch_unsorted.can
Routed = String

String => Routed {
    String -> (
        * "/b" => Routed { "b" }
        * "/a" => Routed { "a" }
        * String => Routed { "other" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
